fix overflow issue

--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -16,3 +16,11 @@
 .markdown h3 {
   @apply text-2xl mt-8 mb-4 leading-snug;
 }
+
+.markdown pre {
+  max-width: 100%;
+}
+
+.markdown code {
+  max-width: 100%;
+}
